# misc_utils

./: CMakeLists.txt  README.md
include/Yo/: File  Task  Types  Y_Algorithm  Y_Task
include_private/: ExcelRender.hpp  FileReader.hpp  TaskQueue.hpp  Types.hpp
include_private/algorithm/: _lzw.h  lzw.hpp
src/: ExcelRender.cpp  TaskQueue.cpp  Types.cpp
src/algorithm/: _lzw.cpp  lzw.cpp
test/: CMakeLists.txt  CMakePresets.json  main.cpp  testRead  test_file.cpp
